--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Albin Yngve – Digital Data Strategy</title>
+    <title>Helsingbäst</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -29,7 +29,7 @@
             <span class="icon-bar"></span>
           </button>
                 
-                <a class="navbar-brand" href="#">Helsingbäst.nu</a>
+                <a class="navbar-brand" href="#">HELSINGBÄST</a>
         </div>
               <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
